# quotient-cookbooks

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: evaluate-tool-call.mdc
app/api/fireplexity/search/: route.ts
cookbooks/agents/deep_research/: openai-deepresearch-quotient.ipynb
cookbooks/agents/openai_financial_research_agent/: README.md  main.py  manager.py
cookbooks/agents/openai_financial_research_agent/scripts/: prompt_generation.py
cookbooks/agents/research/: Evaluating_Agent_Reliability_with_Quotient_Reports.ipynb  exa-quotient-agent.ipynb  search_queries.jsonl  tavily-quotient-agent.ipynb  tavily_quotient_agent.ipynb
cookbooks/agents/research/financial_agent/: README.md  agent.py
cookbooks/benchmarks/dataset/: tools_evaluations.jsonl
cookbooks/benchmarks/tool-use/: limbic_tool_use_benchmark.ipynb  limbic_tool_use_evaluation.ipynb  models_tool_use_benchmark.ipynb
cookbooks/rag/qdrant/: qdrant-quotient-detections.ipynb
cookbooks/search/exa/: exa-oai-quotient-detections.ipynb  exa-quotient-detections.ipynb
cookbooks/search/firecrawl/fireplexity/: .env.example  README.md  package-lock.json  package.json
cookbooks/search/linkup/: linkup-quotient-detections.ipynb  linkup-quotient-search.ipynb
cookbooks/search/tavily/: tavily-quotient-detections.ipynb  tavily_quotient_detections.ipynb
cookbooks/usecases/: financial_agent.py
examples/tracing/: README.md
simple_search_agent/: main.py
training_demos/: .env.example  README.md
training_demos/openai_financial_research_agent/: README.md  main.py  pyproject.toml
training_demos/openai_financial_research_agent/data/: questions.txt
training_demos/openai_financial_research_agent/demo/: manager.py
training_demos/openai_financial_research_agent/scripts/: generate_training_data.sh  prompt_generation.py
(+5 files in other folders)
