[project]
name = "quotient-cookbooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.102.0",
    "openai-agents==0.2.10",
    "openinference-instrumentation-openai-agents>=1.4.0",
    "quotientai>=0.4.17",
]
