[project]
name = "openai-financial-research-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.9"
dependencies = [
    "openai==2.8.1",
    "openai-agents==0.5.0",
    "openinference-instrumentation-openai-agents>=1.3.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "quotientai>=0.4.17",
    "rich>=13.7.0,<14.0.0",   
]
